# lizard

./: .gitignore  .travis.yml  Makefile  NEWS  README.md  appveyor.yml  lz5_Block_format.md  lz5_Frame_format.md
cmake_unofficial/: CMakeLists.txt
contrib/djgpp/: Makefile  README.MD
doc/: lz5_Block_format.md  lz5_Frame_format.md
examples/: .gitignore  HCStreaming_ringBuffer.c  Makefile  README.md  blockStreaming_doubleBuffer.c  blockStreaming_doubleBuffer.md  blockStreaming_lineByLine.c  blockStreaming_lineByLine.md  blockStreaming_ringBuffer.c  compress_functions.c  frameCompress.c  printVersion.c  simple_buffer.c  streaming_api_basics.md
lib/: .gitignore  LICENSE  Makefile  README.md  liblz5.pc.in  lizard_common.h  lizard_compress.c  lizard_compress.h  lizard_decompress.h  lizard_decompress_liz.h  lizard_frame.c  lizard_frame.h  lizard_frame_static.h  lz5.c  lz5.h  lz5_common.h  lz5_compress.c  lz5_compress.h  lz5_compress_liz.h  lz5_compress_lz4.h  lz5_compress_lz5v2.h  lz5_decompress.c  lz5_decompress.h  lz5_decompress_lz4.h  lz5_decompress_lz5v2.h  lz5_parser_fast.h  lz5_parser_fastbig.h  lz5_parser_fastsmall.h  lz5_parser_hashchain.h  lz5_parser_hc.h  lz5_parser_lowestprice.h  lz5_parser_nochain.h  lz5_parser_optimal.h  lz5_parser_pricefast.h  lz5common.h  lz5frame.c  lz5frame.h  lz5frame_static.h  lz5hc.c  lz5hc.h  (+2 more)
lib/dll/: liblz5.def
lib/entropy/: mem.h
programs/: .gitignore  Makefile  README.md  bench.c  bench.h  datagen.c  datagen.h  frametest.c  fullbench.c  fuzzer.c  lizardcli.c  lizardio.c  lizardio.h  lz5.1  lz5cli.c  lz5io.c  lz5io.h  util.h
projects/VS2010/: lz5.sln
projects/VS2010/datagen/: datagen.vcxproj
projects/VS2010/frametest/: frametest.vcxproj
projects/VS2010/fullbench/: fullbench.vcxproj
projects/VS2010/lz5/: lz5.vcxproj
tests/: Makefile  README.md  datagencli.c  frametest.c  fullbench.c  fuzzer.c
visual/: .gitignore  README.md
visual/VS2010/: lz5.sln
visual/VS2010/datagen/: datagen.vcxproj
visual/VS2010/frametest/: frametest.vcxproj
visual/VS2010/fullbench/: fullbench.vcxproj
visual/VS2010/fuzzer/: fuzzer.vcxproj
visual/VS2010/liblizard/: liblizard.vcxproj
visual/VS2010/liblizard-dll/: liblizard-dll.rc  liblizard-dll.vcxproj
visual/VS2010/liblz5/: liblz5.vcxproj
visual/VS2010/liblz5-dll/: liblz5-dll.rc  liblz5-dll.vcxproj
visual/VS2010/lizard/: lizard.rc  lizard.vcxproj
visual/VS2010/lz5/: lz5.rc  lz5.vcxproj
